--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">RickAndMorty</string>
-    <string name="characters_title">Characters</string>
-    <string name="locations_title">Locations</string>
-    <string name="episodes_title">Episodes</string>
-    <string name="settings_title">Settings</string>
+    <string name="characters_title">Персонажи</string>
+    <string name="locations_title">Локации</string>
+    <string name="episodes_title">Эпизоды</string>
+    <string name="settings_title">Настройки</string>
 </resources>
