Add search label view

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="episodes_title">Episodes</string>
     <string name="settings_title">Settings</string>
     <string name="error_network">Error with network. Please, check internet connection</string>
+    <string name="find_character">Find a character</string>
+    <string name="find_location">Find a location</string>
+    <string name="find_episode">Find a episode</string>
 </resources>
