--- a/core/strings/src/main/res/values/strings.xml
+++ b/core/strings/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="season_3">Season 3</string>
     <string name="season_4">Season 4</string>
     <string name="season_5">Season 5</string>
+    <string name="episode_n">Episode %d</string>
 </resources>
